Sugati/src/objects/Itinerary_Text__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(ISBLANK(IT_What_to_do__c) ,  IT_Where_to_go__r.W_Country__r.Name ,  IT_What_to_do__r.WH_Country__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Countryf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Quote_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Holiday_Type__c</fullName>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Quote_Text</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IT_Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Quote_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Quote_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_What_to_do__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Accom, Trfr, Excur, Free Day</inlineHelpText>
        <label>What to do</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Itinerary_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Itinerary Text</relationshipLabel>
        <relationshipName>Itinerary_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Itinerary Text</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IT_Holiday_Type__c</columns>
        <columns>IT_Supplier__c</columns>
        <columns>IT_Country__c</columns>
        <columns>IT_What_to_do__c</columns>
        <columns>IT_Where_to_go__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>IT_Holiday_Type__c</columns>
        <columns>IT_Status__c</columns>
        <columns>IT_Supplier__c</columns>
        <columns>IT_Country__c</columns>
        <columns>IT_What_to_do__c</columns>
        <columns>IT_Where_to_go__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IT_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_edited</fullName>
        <columns>NAME</columns>
        <columns>IT_Holiday_Type__c</columns>
        <columns>IT_Status__c</columns>
        <columns>IT_Supplier__c</columns>
        <columns>IT_Country__c</columns>
        <columns>IT_What_to_do__c</columns>
        <columns>IT_Where_to_go__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IT_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Product,Jacqui,Tom</value>
        </filters>
        <label>Approved but edited last 7 days</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_edited_1</fullName>
        <columns>NAME</columns>
        <columns>IT_Holiday_Type__c</columns>
        <columns>IT_Status__c</columns>
        <columns>IT_Supplier__c</columns>
        <columns>IT_Country__c</columns>
        <columns>IT_What_to_do__c</columns>
        <columns>IT_Where_to_go__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IT_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>N_DAYS_AGO:1</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Product,Jacqui,Tom</value>
        </filters>
        <label>Approved but edited last 2 days</label>
    </listViews>
    <nameField>
        <displayFormat>IT-{0000000000}</displayFormat>
        <label>ItineraryText ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Text</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>More_then_one_lookup</fullName>
        <active>true</active>
        <description>Itinerary text records can only have WTD, WTG or Supplier look up  only</description>
        <errorConditionFormula>( !ISBLANK(IT_What_to_do__c) &amp;&amp;  !ISBLANK( IT_Where_to_go__c )) || ( !ISBLANK(IT_What_to_do__c) &amp;&amp;  !ISBLANK( IT_Supplier__c )) || ( !ISBLANK(IT_Where_to_go__c ) &amp;&amp;  !ISBLANK( IT_Supplier__c ))</errorConditionFormula>
        <errorMessage>An Itinerary text record can only have Where to go, Activity or Supplier look up only. It cannot be saved under more than one category.</errorMessage>
    </validationRules>
</CustomObject>